Some changes are done to improve the page

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
         </div>
         <!-- End home section -->
-                <!-- About us section start -->
+        <!-- About us section start -->
         <div class="section primary-section" id="about">
             <!-- <div class="triangle"></div> -->
             <div class="container">
@@ -138,7 +138,7 @@
                             <p>Crear experiencias únicas y valiosas celebrando momentos y conectando personas trabajando apasionadamente para brindar soluciones integrales de excelencia para superar las expectativas de nuestros clientes.</p>
                              <h4>VISIÓN</h4>
                             <p>Ser reconocidos en la industria de eventos y entretenimiento por el impacto positivo que generemos en la vida de las personas. Liderar con innovación constante para ofrecer experiencias memorables.</p>
-                             <button class="button button-sp">Contáctenos</button>
+                             <a href="#contactenos" class="button button-sp">Contáctenos</a>
                         </div>    
                     </div>
                     <div class="span4">
@@ -174,7 +174,7 @@
             <div class="triangle"></div>
             <div class="container">
                 <div class="title">
-                    <h1>servicios</h1>
+                    <h1>SERVICIOS</h1>
                     <p>Nuestros servicios se han estructurado en tres categorias que abarcan la experiencia y la logística como proveedores de servicos en el campo del entretenimiento.</p>
                 </div>
                 <div class="row-fluid team">
@@ -184,12 +184,12 @@
                             <h3>EVENTOS</h3>
                             <ul class="social">
                                 <li>
-                                    <a href="">
+                                    <a href="mailto:juegosfelices.co@gmail.com?subject=Información sobre sus Eventos" target="_blank">
                                         <span class="icon-email"></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="https://wa.link/dt1icc" target="_blank">
                                         <span class="icon-mobile"></span>
                                     </a>
                                 </li>
@@ -211,12 +211,12 @@
                             <h3>ALQUILER</h3>
                             <ul class="social">
                                 <li>
-                                    <a href="">
+                                    <a href="mailto:juegosfelices.co@gmail.com?subject=Información de Alquileres" target="_blank">
                                         <span class="icon-email"></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="https://wa.link/dt1icc" target="_blank">
                                          <span class="icon-mobile"></span>
                                     </a>
                                 </li>
@@ -238,12 +238,12 @@
                             <h3>VENTA</h3>
                             <ul class="social">
                                 <li>
-                                    <a href="">
+                                    <a href="mailto:juegosfelices.co@gmail.com?subject=Información de Ventas" target="_blank">
                                         <span class="icon-email"></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="https://wa.link/dt1icc" target="_blank">
                                         <span class="icon-mobile"></span>
                                     </a>
                                 </li>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="centered">
                     <p class="price-text">Tenemos ofertas que seguro le van a interesar.</p>
-                    <a href="#contact" class="button">Contáctenos</a>
+                    <a href="#contactenos" class="button">Contáctenos</a>
                 </div>
             </div>
         </div>
@@ -272,7 +272,7 @@
             <!-- <div class="triangle"></div> -->
             <div class="container centered">
                 <h1>RECAUDACIÓN DE FONDOS</h1><p class="large-text">Ayudamos a las organizaciones a alcanzar sus metas de financiamiento y a su vez creamos un impacto positivo en su comunidad a través de la lúdica. </p>
-                <a href="#" class="button">Llamenos Ahóra!</a>
+                <a href="https://wa.link/dt1icc" target="_blank" class="button">Escribenos!</a>
             </div>
         </div>
         <!-- recaudacionF section end -->  
@@ -296,39 +296,39 @@
                     </div>
                     <ul class="row client-slider" id="clint-slider">
                         <li>
-                            <a href="">
+                            <div>
                                 <img src="images/clients/ClientLogo01.png" alt="client logo 1">
-                            </a>
+                            </div>
                         </li>
                         <li>
-                            <a href="">
+                            <div>
                                 <img src="images/clients/ClientLogo02.png" alt="client logo 2">
-                            </a>
+                            </div>
                         </li>
                         <li>
-                            <a href="">
+                            <div>
                                 <img src="images/clients/ClientLogo03.png" alt="client logo 3">
-                            </a>
+                            </div>
                         </li>
                         <li>
-                            <a href="">
+                            <div>
                                 <img src="images/clients/ClientLogo04.png" alt="client logo 4">
-                            </a>
+                            </div>
                         </li>
                         <li>
-                            <a href="">
+                            <div>
                                 <img src="images/clients/ClientLogo05.png" alt="client logo 5">
-                            </a>
+                            </div>
                         </li>
                         <li>
-                            <a href="">
+                            <div>
                                 <img src="images/clients/ClientLogo02.png" alt="client logo 6">
-                            </a>
+                            </div>
                         </li>
                         <li>
-                            <a href="">
+                            <div>
                                 <img src="images/clients/ClientLogo04.png" alt="client logo 7">
-                            </a>
+                            </div>
                         </li>
                     </ul>
                     </div>
@@ -779,7 +779,7 @@
         <div class="section primary-section" id="contactenos">
             <div class="container">
                 <!-- Start title section -->
-                <div class="title">
+                <div class="title contactUs">
                     <h1>CONTÁCTENOS</h1>
                     <!-- Section's title goes here -->
                     <p>Puede contáctarnos como lo prefiera, estaremos atentos a servirle en todo lo que esté a nuestro alcance.</p>
@@ -794,19 +794,19 @@
                                 <form id="contact-form" action="php/mail.php">
                                     <div class="control-group">
                                         <div class="controls">
-                                            <input class="span12" type="text" id="name" name="name" placeholder="* Your name..." />
+                                            <input class="span12" type="text" id="name" name="name" placeholder="* Tu nombre..." />
                                             <div class="error left-align" id="err-name">Por favor digite su Nombre.</div>
                                         </div>
                                     </div>
                                     <div class="control-group">
                                         <div class="controls">
-                                            <input class="span12" type="email" name="email" id="email" placeholder="* Your email..." />
+                                            <input class="span12" type="email" name="email" id="email" placeholder="* Tu Correo..." />
                                             <div class="error left-align" id="err-email">Por favor revise que sea correcto su email</div>
                                         </div>
                                     </div>
                                     <div class="control-group">
                                         <div class="controls">
-                                            <textarea class="span12" name="comment" id="comment" placeholder="* Comments..."></textarea>
+                                            <textarea class="span12" name="comment" id="comment" placeholder="* Comentarios..."></textarea>
                                             <div class="error left-align" id="err-comment">Por favor ingrese su comentario.</div>
                                         </div>
                                     </div>
