--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
                     <div class="nav-collapse collapse pull-right">
                         <ul class="nav" id="top-navigation">
                             <li class="active"><a href="#home">Home</a></li>
-                            <li><a href="#servicios">servicios</a></li>
-                       
                             <li><a href="#about">Nosotros</a></li>
+                            <li><a href="#portafolio">Portafolio</a></li>         
                             <li><a href="#clients">Clientes</a></li>
                             <li><a href="#galeria">Galería</a></li>
                             <li><a href="#contactenos">Contáctenos</a></li>                         
@@ -169,12 +168,12 @@
             
         </div>
         <!-- About us section end -->
-         <!-- servicios section start -->
-        <div id="servicios" class="section secondary-section">
+         <!-- portafolio section start -->
+        <div id="portafolio" class="section secondary-section">
             <div class="triangle"></div>
             <div class="container">
                 <div class="title">
-                    <h1>SERVICIOS</h1>
+                    <h1>PORTAFOLIO</h1>
                     <p>Nuestros servicios se han estructurado en tres categorias que abarcan la experiencia y la logística como proveedores de servicos en el campo del entretenimiento.</p>
                 </div>
                 <div class="row-fluid team">
@@ -266,7 +265,7 @@
                 </div>
             </div>
         </div>
-        <!-- servicios section end -->    
+        <!-- portafolio section end -->    
         <!-- recaudacionF section start -->     
         <div class="section secondary-section">
             <!-- <div class="triangle"></div> -->
@@ -877,7 +876,7 @@
                 <div class="row-fluid">
                     <div class="span2">
                         <li class="active"> <a href="index.html">Home</a> </li>
-                                    <li><a href="#about">Servicios</a> </li>
+                                    <li><a href="#portafolio">Portafolio</a> </li>
                                     <li><a href="#game">Nosotros</a> </li>
                                     <li><a href="#customer">Clientes</a> </li>
                                     <li><a href="#conatct">Galería</a></li>
