--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <!-- Main navigation -->
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav" id="top-navigation">
-                        <li class="active"><a href="#home">Home</a></li>
+                        <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="#about">Nosotros</a></li>
                         <li><a href="#portafolio">Portafolio</a></li>
                         <li><a href="#clients">Clientes</a></li>
@@ -76,7 +76,7 @@
                     <h4>Recaudación de fondos</h4>
                     <p>Contamos con mas de 20 años de experiencia en la organización de Bingos, Eventos Empresariales,
                         Recaudación de Fondos, Transmisiones Virtuales y Eventos Deportivos. </p>
-                    <a href="#" class="da-link button">Más Información</a>
+                    <a href="eventos.html" class="da-link button">Más Información</a>
                     <div class="da-img">
                         <img src="images/Slider01.png" alt="image01" width="320">
                     </div>
@@ -88,7 +88,7 @@
                     <h4>Si le falta algo para su evento </h4>
                     <p>tenemos alquiler de Bingos, sonido, pantallas, iluminacion, sillas, tarimas, juegos de sala y
                         todo lo necesario para que no deba preocuparse por atender cantidad de proveedores.</p>
-                    <a href="#" class="da-link button">Más Información</a>
+                    <a href="alquiler.html" class="da-link button">Más Información</a>
                     <div class="da-img">
                         <img src="images/Slider02.png" width="320" alt="image02">
                     </div>
@@ -100,7 +100,7 @@
                     <h4>desea equipar su terraza o finca?</h4>
                     <p>Tenemos una sección en la que podra encontrar toda clase de juegos de sala y mesa con los cuales
                         se divertirá en el mejor sitio y con la mejor compañía.</p>
-                    <a href="#" class="da-link button">Más Información</a>
+                    <a href="venta.html" class="da-link button">Más Información</a>
                     <div class="da-img">
                         <img src="images/Slider03.png" width="320" alt="image03">
                     </div>
@@ -209,7 +209,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="">
+                                <a href="eventos.html">
                                     <span class="icon-plus"></span>
                                 </a>
                             </li>
@@ -237,7 +237,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="">
+                                <a href="alquiler.html">
                                     <span class="icon-plus"></span>
                                 </a>
                             </li>
@@ -265,7 +265,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="">
+                                <a href="venta.html">
                                     <span class="icon-plus"></span>
                                 </a>
                             </li>
@@ -732,10 +732,10 @@
                                 <i class="icon-plus"></i>
                                 
                             </a> -->
-                            <h3>Thumbnail label</h3>
+                            <h3>EVENTOS EMPRESARIALES</h3>
                             <p>Thumbnail caption...</p>
                             <div class="mask"> 
-                                <h2> Bingos</h2>
+                                <h2> EVENTOS EMPRESARIALES</h2>
                                 <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
@@ -754,10 +754,10 @@
                             <!-- <a href="#single-project" class="show_hide more" rel="#slidingDiv1">
                                 <i class="icon-plus"></i>
                             </a> -->
-                            <h3>Thumbnail label</h3>
+                            <h3>BINGOS HIBRIDOS</h3>
                             <p>Thumbnail caption...</p>
                             <div class="mask">
-                                <h2> Bingos</h2>
+                                <h2> BINGOS HIBRIDOS</h2>
                                 <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
@@ -776,10 +776,10 @@
                             <!-- <a href="#single-project" class="more show_hide" rel="#slidingDiv2">
                                 <i class="icon-plus"></i>
                             </a> -->
-                            <h3>Thumbnail label</h3>
+                            <h3>RECAUDACION DE FONDOS</h3>
                             <p>Thumbnail caption...</p>
                             <div class="mask">
-                                <h2> Bingos</h2>
+                                <h2> RECAUDACIÓN DE FONDOS</h2>
                                 <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
@@ -794,7 +794,7 @@
                     </li>
                     <li class="span4 mix photo">
                         <div class="thumbnail">
-                            <img src="images/alquilerVentas/alquiler01.png" alt="project 4">
+                            <img src="images/alquilerVentas/alquilerSonido.png" alt="project 4">
                             <!-- <a href="#single-project" class="show_hide more" rel="#slidingDiv3">
                                 <i class="icon-plus"></i>
                             </a> -->
@@ -816,7 +816,7 @@
                     </li>
                     <li class="span4 mix photo">
                         <div class="thumbnail">
-                            <img src="images/alquilerVentas/alquiler02.png" alt="project 5">
+                            <img src="images/alquilerVentas/alquilerSonido2.png" alt="project 5">
                             <!-- <a href="#single-project" class="show_hide more" rel="#slidingDiv4">
                                 <i class="icon-plus"></i>
                             </a> -->
@@ -838,7 +838,7 @@
                     </li>
                     <li class="span4 mix photo">
                         <div class="thumbnail">
-                            <img src="images/alquilerVentas/alquiler03.png" alt="project 6">
+                            <img src="images/alquilerVentas/alquilerCarpas.png" alt="project 6">
                             <!-- <a href="#single-project" class="show_hide more" rel="#slidingDiv5">
                                 <i class="icon-plus"></i>
                             </a> -->
