--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             </li>
                             <li>
                                 <a href="https://wa.link/dt1icc" target="_blank" class="whatsApp">
-                                    <span> <img class="iconsPortfolio" src="images/socialM/whatsapp.png"/></span>
+                                    <span> <img class="iconsPortfolio" src="images/socialM/whatsapp2.png"/></span>
                                 </a>
                             </li>
                             <li>
@@ -216,7 +216,7 @@
                         </ul>
                         <div class="mask">
                             <h2>Organización de eventos</h2>
-                            <p>Contamos con mas de 20 años de experiencia en la organización de Eventos. </p>
+                            <p>Nos especializamos en la planificación y ejecución de todo tipo de eventos,con mas de 20 años de experiencia ofrecemos bingos presenciales, virtuales e híbridos, eventos empresariales, eventos para recaudación de fondos, etc</p>
                         </div>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
                             </li>
                             <li>
                                 <a href="https://wa.link/dt1icc" target="_blank" class="whatsApp">
-                                    <span> <img class="iconsPortfolio" src="images/socialM/whatsapp.png"/></span>
+                                    <span> <img class="iconsPortfolio" src="images/socialM/whatsapp2.png"/></span>
                                 </a>
                             </li>
                             <li>
@@ -244,7 +244,7 @@
                         </ul>
                         <div class="mask">
                             <h2>Alquiler de equipos</h2>
-                            <p>Tenemos lo necesario para que no deba preocuparse por la cantidad de proveedores.</p>
+                            <p>La variedad de opciones disponibles y la posibilidad de recibir asesoramiento son algunas de las ventajas de alquilar equipos con nosotros. </p>
                         </div>
                     </div>
                 </div>
@@ -261,7 +261,7 @@
                             </li>
                             <li>
                                 <a href="https://wa.link/dt1icc" target="_blank" class="whatsApp">
-                                    <span> <img class="iconsPortfolio" src="images/socialM/whatsapp.png"/></span>
+                                    <span> <img class="iconsPortfolio" src="images/socialM/whatsapp2.png"/></span>
                                 </a>
                             </li>
                             <li>
@@ -272,7 +272,7 @@
                         </ul>
                         <div class="mask">
                             <h2>Venta de juegos</h2>
-                            <p>Encuentre toda clase de juegos de sala y mesa con los cuales divertirse</p>
+                            <p>Encuentre toda clase de juegos de sala y mesa con los cuales divertirse y vivir grandes momentos</p>
                         </div>
                     </div>
                 </div>
@@ -332,6 +332,16 @@
                         <li>
                             <div>
                                 <img src="images/clients/clientelogo04.png" alt="client logo 4">
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="images/clients/clientelogo05.png" alt="client logo 4">
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="images/clients/clientelogo06.png" alt="client logo 4">
                             </div>
                         </li>
                     </ul>
@@ -733,10 +743,8 @@
                                 
                             </a> -->
                             <h3>EVENTOS EMPRESARIALES</h3>
-                            <p>Thumbnail caption...</p>
                             <div class="mask"> 
-                                <h2> EVENTOS EMPRESARIALES</h2>
-                                <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
+                                <p>Nuestra área de organización de eventos empresariales se enfoca en escuchar sus necesidades para crear la planificación y ejecución ideal, que le permita despreocuparse y así disfrutar de un evento que cumplirá sus objetivos</p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
                                         <span> <img class="iconsContact" src="images/socialM/whatsapp.png"/> </span>
@@ -744,7 +752,7 @@
                                     <a href="mailto:juegosfelices.co@gmail.com?subject=Información sobre sus servicios" target='_blank'>
                                         <span> <img class="iconsContact" src="images/socialM/gmail.png"/> </span>
                                     </a>
-                                </div>
+                            </div>
                             </div>
                         </div>
                     </li>
@@ -755,10 +763,8 @@
                                 <i class="icon-plus"></i>
                             </a> -->
                             <h3>BINGOS HIBRIDOS</h3>
-                            <p>Thumbnail caption...</p>
-                            <div class="mask">
-                                <h2> BINGOS HIBRIDOS</h2>
-                                <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
+                            <div class="mask">                             
+                                <p>Contamos con mas de 20 años de experiencia en la organización de bingos, podemos garantizar que su evento será divertido para los participantes y que usted podrá cubrir sus necesidades.</p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
                                         <span> <img class="iconsContact" src="images/socialM/whatsapp.png"/> </span>
@@ -777,10 +783,8 @@
                                 <i class="icon-plus"></i>
                             </a> -->
                             <h3>RECAUDACION DE FONDOS</h3>
-                            <p>Thumbnail caption...</p>
-                            <div class="mask">
-                                <h2> RECAUDACIÓN DE FONDOS</h2>
-                                <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
+                            <div class="mask">                            
+                                <p>Ayudamos a las organizaciones a alcanzar sus metas de financiamiento y a su vez creamos un impacto positivo en su comunidad a través de la lúdica.</p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
                                         <span> <img class="iconsContact" src="images/socialM/whatsapp.png"/> </span>
@@ -798,11 +802,10 @@
                             <!-- <a href="#single-project" class="show_hide more" rel="#slidingDiv3">
                                 <i class="icon-plus"></i>
                             </a> -->
-                            <h3>Thumbnail label</h3>
-                            <p>Thumbnail caption...</p>
+                            <h3>Alquiler de sonido</h3>
                             <div class="mask">
-                                <h2> Bingos</h2>
-                                <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
+                                <p>Los sistemas de sonido se seleccionan según las necesidades del evento, el alquiler es una excelente opción para obtener claridad y  potencia.</p>
+                                <p class="paragrap2">Los componentes incluyen altavoces, mezcladores, amplificadores, micrófonos y cables,</p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
                                         <span> <img class="iconsContact" src="images/socialM/whatsapp.png"/> </span>
@@ -816,15 +819,14 @@
                     </li>
                     <li class="span4 mix photo">
                         <div class="thumbnail">
-                            <img src="images/alquilerVentas/alquilerSonido2.png" alt="project 5">
+                            <img src="images/alquilerVentas/aquilerJSala.png" alt="project 5">
                             <!-- <a href="#single-project" class="show_hide more" rel="#slidingDiv4">
                                 <i class="icon-plus"></i>
                             </a> -->
-                            <h3>Thumbnail label</h3>
-                            <p>Thumbnail caption...</p>
+                            <h3>Alquiler de Juegos de sala</h3>
                             <div class="mask">
-                                <h2> Bingos</h2>
-                                <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
+                                <p>El alquiler de juegos de sala es una excelente opción para agregar diversión a eventos como fiestas de cumpleaños, reuniones familiares y noches de juegos con amigos. </p>
+                                <p class="paragrap2">La variedad de opciones disponibles, desde juegos clásicos hasta juegos modernos. </p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
                                         <span> <img class="iconsContact" src="images/socialM/whatsapp.png"/> </span>
@@ -842,11 +844,9 @@
                             <!-- <a href="#single-project" class="show_hide more" rel="#slidingDiv5">
                                 <i class="icon-plus"></i>
                             </a> -->
-                            <h3>Thumbnail label</h3>
-                            <p>Thumbnail caption...</p>
-                            <div class="mask">
-                                <h2> Bingos</h2>
-                                <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
+                            <h3>Alquiler de Carpas</h3>
+                            <div class="mask">                   
+                                <p>Para eventos al aire libre Las carpas ofrecen protección contra el clima y se pueden personalizar para crear el ambiente deseado. </p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
                                         <span> <img class="iconsContact" src="images/socialM/whatsapp.png"/> </span>
@@ -860,15 +860,13 @@
                     </li>
                     <li class="span4 mix identity">
                         <div class="thumbnail">
-                            <img src="images/alquilerVentas/venta01.png" alt="project 7" />
+                            <img src="images/alquilerVentas/ventaPingPong.png" alt="project 7" />
                             <!-- <a href="#single-project" class="show_hide more" rel="#slidingDiv6">
                                 <i class="icon-plus"></i>
                             </a> -->
-                            <h3>Thumbnail label</h3>
-                            <p>Thumbnail caption...</p>
-                            <div class="mask">
-                                <h2> Bingos</h2>
-                                <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
+                            <h3>Venta de Ping Pong</h3>
+                            <div class="mask">           
+                                <p>El ping pong ofrece una experiencia de entretenimiento emocionante, ayuda a mejorar la coordinación ojo-mano y la capacidad de tomar decisiones rápidas, es una excelente opción para pasar tiempo con amigos y familiares.</p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
                                         <span> <img class="iconsContact" src="images/socialM/whatsapp.png"/> </span>
@@ -882,15 +880,13 @@
                     </li>
                     <li class="span4 mix identity">
                         <div class="thumbnail">
-                            <img src="images/alquilerVentas/venta02.png" alt="project 8">
+                            <img src="images/alquilerVentas/ventaBillar.png" alt="project 8">
                             <!-- <a href="#single-project" class="show_hide more" rel="#slidingDiv7">
                                 <i class="icon-plus"></i>
                             </a> -->
-                            <h3>Thumbnail label</h3>
-                            <p>Thumbnail caption...</p>
-                            <div class="mask">
-                                <h2> Bingos</h2>
-                                <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
+                            <h3>Venta de Billar</h3>
+                            <div class="mask">           
+                                <p>El billar brinda entretenimiento y socialización para todas las edades y habilidades mejora la concentración, la precisión, la estrategia y la paciencia.</p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
                                         <span> <img class="iconsContact" src="images/socialM/whatsapp.png"/> </span>
@@ -904,15 +900,13 @@
                     </li>
                     <li class="span4 mix identity">
                         <div class="thumbnail">
-                            <img src="images/alquilerVentas/venta03.png" alt="project 9">
+                            <img src="images/alquilerVentas/ventaJuegosMesa.png" alt="project 9">
                             <!-- <a href="#single-project" class="show_hide more" rel="#slidingDiv8">
                                 <i class="icon-plus"></i>
                             </a> -->
-                            <h3>Thumbnail label</h3>
-                            <p>Thumbnail caption...</p>
+                            <h3>Venta de Juegos de Mesa</h3>
                             <div class="mask">
-                                <h2> Bingos</h2>
-                                <p>Alquiler de juegos de Bingo y asecsorios para todo el publico</p>
+                                <p>Los juegos de mesa ofrecen entretenimiento para todas las edades, mejoran habilidades como la memoria, la concentración, la toma de decisiones, la resolución de problemas y la comunicación, son excelentes para conectar personas.</p>
                                 <div class="buttonsGalery">
                                     <a href="https://wa.link/dt1icc" target='_blank'>
                                         <span> <img class="iconsContact" src="images/socialM/whatsapp.png"/> </span>
@@ -1055,15 +1049,18 @@
                     <li><a href="#galeria">Galería</a></li>
                 </div>
                 <div class="span3">
-                    <li class="active"> <a href="index.html">Organización de Eventos</a> </li>
-                    <li><a href="#about">Alquiler de Equipos</a> </li>
-                    <li><a href="#game">Venta de Juegos</a> </li>
-                    <li><a href="#customer">Preguntas Frecuentes</a> </li>
-                    <li><a href="#conatct">Políticas de Privacidad</a></li>
+                    <li class="active"> <a href="eventos.html">Organización de Eventos</a> </li>
+                    <li><a href="alquiler.html">Alquiler de Equipos</a> </li>
+                    <li><a href="venta.html">Venta de Juegos</a> </li>
+                    <!-- <li><a href="#customer">Preguntas Frecuentes</a> </li> -->
+                    <li><a href="documents/terminosDeUso.pdf" target="_blank">Términos de Uso</a></li>
+                    <li><a href="documents/politicasPrivacidad.pdf" target="_blank">Políticas de Privacidad</a></li>
                 </div>
                 <div class="span7">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
-                        ut laoreet dolore magna aliquam erat volutpat.</p>
+                            <p>Nos especializamos en la planificación y ejecución de eventos como: bingos, eventos
+                            empresariales, eventos para recaudación de fondos, transmisiones en streaming, eventos
+                            deportivos y fiestas. Ofrecemos precios competitivos gracias a nuestra confiable red de
+                            proveedores, además alquilamos y vendemos lo que necesite.</p>
                 </div>
 
             </div>
